Corrected authorUrl in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "Lays out notes based on the Cornell note-taking style",
 	"author": "nagashimam",
-	"authorUrl": "https://obsidian.md",
+	"authorUrl": "https://github.com/nagashimam",
 	"isDesktopOnly": false
 }
